creamos la viñeta de promos

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Burgers" asp-action="Index">Burgers</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Promos" asp-action="Index">Promos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
